--- a/online_backend/ipython/qt.ipynb
+++ b/online_backend/ipython/qt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f6c5599ba20412701046e2e1627cfc367b39363cb238a2bc0e71c8eb3fdaaae0"
+  "signature": "sha256:d641da874de137b1a69068b08811b972b95059cd02c6799b29d1fac4ef77a650"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,7 @@
       "import json\n",
       "from cStringIO import StringIO\n",
       "\n",
-      "from vispy import app\n",
+      "from vispy import app, use\n",
       "from vispy import gloo\n",
       "\n",
       "from IPython.display import display\n",
@@ -28,7 +28,7 @@
       "from PyQt4.QtCore import QBuffer, QByteArray, QIODevice, Qt\n",
       "from PyQt4.QtGui import QPixmap \n",
       "\n",
-      "app.use('pyqt4')"
+      "use('pyqt4')"
      ],
      "language": "python",
      "metadata": {},
