--- a/online_backend/ipython/qt_gloo_screenshot.ipynb
+++ b/online_backend/ipython/qt_gloo_screenshot.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:410d35790ddfa92bbc68ab415841bbc3d9999954278adb6767d0fed98d1b3dcf"
+  "signature": "sha256:85ab7795ff3f42a29ebfe6db218051a78434474ca54a6bed4effb558263b4fc7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,6 +16,8 @@
       "import base64\n",
       "import numpy as np\n",
       "import json\n",
+      "import zlib\n",
+      "import struct\n",
       "from cStringIO import StringIO\n",
       "\n",
       "from vispy import app, use\n",
@@ -129,63 +131,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def make_png(data):\n",
-      "    \"\"\"\n",
-      "    Convert numpy array to PNG byte array.\n",
-      "    *data* must be (H, W, 4) with dtype=ubyte\n",
-      "    \"\"\"\n",
-      "    # www.libpng.org/pub/png/spec/1.2/PNG-Structure.html\n",
-      "    header = b'\\x89PNG\\x0d\\x0a\\x1a\\x0a' # header\n",
-      " \n",
-      "    def mkchunk(data, name):\n",
-      "        if isinstance(data, np.ndarray):\n",
-      "            size = data.nbytes\n",
-      "        else:\n",
-      "            size = len(data)\n",
-      "        chunk = np.empty(size + 12, dtype=np.ubyte)\n",
-      "        chunk.data[0:4] = struct.pack('!I', size)\n",
-      "        chunk.data[4:8] = name # b'CPXS' # critical, public, standard, safe\n",
-      "        chunk.data[8:8+size] = data\n",
-      "        chunk.data[-4:] = struct.pack('!i', zlib.crc32(chunk[4:-4]))\n",
-      "        return chunk\n",
-      " \n",
-      "    # www.libpng.org/pub/png/spec/1.2/PNG-Chunks.html#C.IHDR\n",
-      "    ctyp = 0b0110 # alpha, color\n",
-      "    h, w = data.shape[:2]\n",
-      "    depth = data.itemsize * 8\n",
-      "    ihdr = struct.pack('!IIBBBBB', w, h, depth, ctyp, 0, 0, 0)\n",
-      "    c1 = mkchunk(ihdr, 'IHDR')\n",
-      "\n",
-      "    # www.libpng.org/pub/png/spec/1.2/PNG-Chunks.html#C.IDAT\n",
-      "    idat = np.empty((h, w*4 + 1), dtype=np.ubyte) # insert filter byte at each scanline\n",
-      "    idat[:, 1:] = data.reshape(h, w*4)\n",
-      "    idat[:, 0] = 0\n",
-      "        \n",
-      "    comp_data = zlib.compress(idat, 4)\n",
-      "    c2 = mkchunk(comp_data, 'IDAT')    \n",
-      "    c3 = mkchunk(np.empty((0,), dtype=np.ubyte), 'IEND')\n",
-      "\n",
-      "    # concatenate\n",
-      "    lh = len(header)\n",
-      "    png = np.empty(lh + c1.nbytes + c2.nbytes + c3.nbytes, dtype=np.ubyte)\n",
-      "    png.data[:lh] = header\n",
-      "    p = lh\n",
-      "    \n",
-      "    for chunk in (c1, c2, c3):\n",
-      "        png[p:p+len(chunk)] = chunk\n",
-      "        p += chunk.nbytes\n",
-      "\n",
-      "    return png"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "class Screenshot(DOMWidget):\n",
       "    _view_name = Unicode(\"Screenshot\", sync=True)\n",
       "    # base64 encoded value of the PNG image\n",
@@ -207,7 +152,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -239,19 +184,21 @@
       "        # Take a screenshot\n",
       "        self.shot()\n",
       "        # Invoke a new draw\n",
-      "        self.update()\n",
+      "        self.update([0,0,500,500])\n",
       "        \n",
       "    def shot(self):\n",
-      "        screen = _screenshot()\n",
+      "        scr = _screenshot()\n",
+      "        print \"as\"\n",
+      "        print 3+5\n",
       "        \n",
-      "        #png = make_png(screen)  \n",
-      "        png = Image.frombuffer(screen)\n",
+      "        png = self.make_png(scr)  \n",
       "        \n",
-      "        buf = StringIO()\n",
-      "        png.save(buf, format=\"PNG\")\n",
+      "        #png = Image.frombuffer(screen)\n",
+      "        #buf = StringIO()\n",
+      "        #png.save(buf, format=\"PNG\")\n",
       "        \n",
       "        # Save widget value\n",
-      "        self.widget.value = base64.b64encode(buf.getvalue())\n",
+      "        #self.widget.value = base64.b64encode(png)\n",
       "        \n",
       "        \n",
       "    def explosion(self, x, y):\n",
@@ -279,12 +226,60 @@
       "        self._starttime = time.time()\n",
       "        # Process events for 1.75 seconds\n",
       "        while time.time() - self._starttime < 1.75:\n",
-      "            self.app.process_events()"
+      "            self.app.process_events()\n",
+      "            \n",
+      "    def make_png(self, data):\n",
+      "        \"\"\"\n",
+      "        Convert numpy array to PNG byte array.\n",
+      "        *data* must be (H, W, 4) with dtype=ubyte\n",
+      "        \"\"\"\n",
+      "        # www.libpng.org/pub/png/spec/1.2/PNG-Structure.html\n",
+      "        header = b'\\x89PNG\\x0d\\x0a\\x1a\\x0a' # header\n",
+      "\n",
+      "        def mkchunk(data, name):\n",
+      "            if isinstance(data, np.ndarray):\n",
+      "                size = data.nbytes\n",
+      "            else:\n",
+      "                size = len(data)\n",
+      "            chunk = np.empty(size + 12, dtype=np.ubyte)\n",
+      "            chunk.data[0:4] = struct.pack('!I', size)\n",
+      "            chunk.data[4:8] = name # b'CPXS' # critical, public, standard, safe\n",
+      "            chunk.data[8:8+size] = data\n",
+      "            chunk.data[-4:] = struct.pack('!i', zlib.crc32(chunk[4:-4]))\n",
+      "            return chunk\n",
+      "\n",
+      "        # www.libpng.org/pub/png/spec/1.2/PNG-Chunks.html#C.IHDR\n",
+      "        ctyp = 0b0110 # alpha, color\n",
+      "        h, w = data.shape[:2]\n",
+      "        depth = data.itemsize * 8\n",
+      "        ihdr = struct.pack('!IIBBBBB', w, h, depth, ctyp, 0, 0, 0)\n",
+      "        c1 = mkchunk(ihdr, 'IHDR')\n",
+      "\n",
+      "        # www.libpng.org/pub/png/spec/1.2/PNG-Chunks.html#C.IDAT\n",
+      "        idat = np.empty((h, w*4 + 1), dtype=np.ubyte) # insert filter byte at each scanline\n",
+      "        idat[:, 1:] = data.reshape(h, w*4)\n",
+      "        idat[:, 0] = 0\n",
+      "\n",
+      "        comp_data = zlib.compress(idat, 4)\n",
+      "        c2 = mkchunk(comp_data, 'IDAT')    \n",
+      "        c3 = mkchunk(np.empty((0,), dtype=np.ubyte), 'IEND')\n",
+      "\n",
+      "        # concatenate\n",
+      "        lh = len(header)\n",
+      "        png = np.empty(lh + c1.nbytes + c2.nbytes + c3.nbytes, dtype=np.ubyte)\n",
+      "        png.data[:lh] = header\n",
+      "        p = lh\n",
+      "\n",
+      "        for chunk in (c1, c2, c3):\n",
+      "            png[p:p+len(chunk)] = chunk\n",
+      "            p += chunk.nbytes\n",
+      "\n",
+      "        return png"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -411,7 +406,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -429,61 +424,102 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "X: 102 Y: 168\n",
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "X: 219 Y: 174\n",
+        "as\n",
+        "8\n",
+        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "as\n",
+        "8\n",
+        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "as\n",
+        "8\n",
+        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "as\n",
+        "8\n",
+        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7fadebd5ae90>] type=draw>\n"
+        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "X: 369 Y: 293\n",
+        "as\n",
+        "8\n",
+        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "X: 143 Y: 279\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
