--- a/online_backend/ipython/qt_gloo_screenshot.ipynb
+++ b/online_backend/ipython/qt_gloo_screenshot.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:85ab7795ff3f42a29ebfe6db218051a78434474ca54a6bed4effb558263b4fc7"
+  "signature": "sha256:591fba89f138393d593583175e34ce1ca22f73d03c6ff1a74600a4e5f5d23b9a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -188,8 +188,6 @@
       "        \n",
       "    def shot(self):\n",
       "        scr = _screenshot()\n",
-      "        print \"as\"\n",
-      "        print 3+5\n",
       "        \n",
       "        png = self.make_png(scr)  \n",
       "        \n",
@@ -507,6 +505,27 @@
        "stream": "stdout",
        "text": [
         "X: 143 Y: 279\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "X: 85 Y: 182\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "X: 116 Y: 367\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "X: 258 Y: 413\n"
        ]
       }
      ],
