--- a/online_backend/ipython/qt_gloo_screenshot.ipynb
+++ b/online_backend/ipython/qt_gloo_screenshot.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:591fba89f138393d593583175e34ce1ca22f73d03c6ff1a74600a4e5f5d23b9a"
+  "signature": "sha256:96f295619696f257d40b193e1f9d90c8b46e8c0e166fc4819fafdf96a5bee685"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -184,19 +184,19 @@
       "        # Take a screenshot\n",
       "        self.shot()\n",
       "        # Invoke a new draw\n",
-      "        self.update([0,0,500,500])\n",
+      "        self.update()\n",
       "        \n",
       "    def shot(self):\n",
       "        scr = _screenshot()\n",
       "        \n",
-      "        png = self.make_png(scr)  \n",
+      "        png = self.make_png(scr)\n",
       "        \n",
       "        #png = Image.frombuffer(screen)\n",
       "        #buf = StringIO()\n",
       "        #png.save(buf, format=\"PNG\")\n",
       "        \n",
       "        # Save widget value\n",
-      "        #self.widget.value = base64.b64encode(png)\n",
+      "        self.widget.value = base64.b64encode(png)\n",
       "        \n",
       "        \n",
       "    def explosion(self, x, y):\n",
@@ -258,7 +258,7 @@
       "        idat[:, 1:] = data.reshape(h, w*4)\n",
       "        idat[:, 0] = 0\n",
       "\n",
-      "        comp_data = zlib.compress(idat, 4)\n",
+      "        comp_data = zlib.compress(idat)\n",
       "        c2 = mkchunk(comp_data, 'IDAT')    \n",
       "        c3 = mkchunk(np.empty((0,), dtype=np.ubyte), 'IEND')\n",
       "\n",
@@ -415,126 +415,6 @@
       "c.show(True)\n",
       "display(c.widget)"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "X: 219 Y: 174\n",
-        "as\n",
-        "8\n",
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "as\n",
-        "8\n",
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "as\n",
-        "8\n",
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "as\n",
-        "8\n",
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "X: 369 Y: 293\n",
-        "as\n",
-        "8\n",
-        "WARNING: Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:vispy:Error invoking callback for event: <DrawEvent blocked=False handled=False native=None region=None source=<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0> sources=[<Vispy canvas (PyQt4 (qt) backend) at 0x7f95b8fcf4d0>] type=draw>\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "X: 143 Y: 279\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "X: 85 Y: 182\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "X: 116 Y: 367\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "X: 258 Y: 413\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
