Update: screenshot using gloo.util._screenshot()

--- a/online_backend/ipython/qt.ipynb
+++ b/online_backend/ipython/qt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d641da874de137b1a69068b08811b972b95059cd02c6799b29d1fac4ef77a650"
+  "signature": "sha256:bc1925c5e5d085084761df8343e60adf2e41ee24ee09dfea09f719b15a178143"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,17 +16,19 @@
       "import base64\n",
       "import numpy as np\n",
       "import json\n",
-      "from cStringIO import StringIO\n",
+      "import zlib\n",
+      "import struct\n",
       "\n",
       "from vispy import app, use\n",
       "from vispy import gloo\n",
+      "from vispy.gloo.util import _screenshot\n",
       "\n",
       "from IPython.display import display\n",
       "from IPython.html.widgets import DOMWidget\n",
       "from IPython.utils.traitlets import Unicode\n",
       "\n",
-      "from PyQt4.QtCore import QBuffer, QByteArray, QIODevice, Qt\n",
-      "from PyQt4.QtGui import QPixmap \n",
+      "from PyQt4.QtCore import Qt\n",
+      "\n",
       "\n",
       "use('pyqt4')"
      ],
@@ -158,23 +160,18 @@
       "        self._program['u_time'] = time.time() - self._starttime\n",
       "        self._program.draw('points')\n",
       "\n",
+      "        # Take a screenshot\n",
       "        self.shot()\n",
       "        # Invoke a new draw\n",
       "        self.update()\n",
       "        \n",
       "    def shot(self):\n",
-      "        p = QPixmap.grabWindow(self.native.winId())\n",
-      "        # Save QPixmap to QByteArray via QBuffer.\n",
-      "        byte_array = QByteArray()\n",
-      "        buf = QBuffer(byte_array)\n",
-      "        buf.open(QIODevice.ReadWrite)\n",
+      "        img = _screenshot()\n",
+      "        img = np.flipud(img)    \n",
+      "        png = self.make_png(img)\n",
       "        \n",
-      "        p.save(buf, 'PNG')\n",
-      "        \n",
-      "        # Read QByteArray containing PNG into a StringIO.\n",
-      "        string_io = StringIO(byte_array)\n",
       "        # Save widget value\n",
-      "        self.widget.value = base64.b64encode(string_io.getvalue())\n",
+      "        self.widget.value = base64.b64encode(png)\n",
       "        \n",
       "        \n",
       "    def explosion(self, x, y):\n",
@@ -202,7 +199,55 @@
       "        self._starttime = time.time()\n",
       "        # Process events for 1.75 seconds\n",
       "        while time.time() - self._starttime < 1.75:\n",
-      "            self.app.process_events()"
+      "            self.app.process_events()\n",
+      "            \n",
+      "    def make_png(self, data):\n",
+      "        \"\"\"\n",
+      "        Convert numpy array to PNG byte array.\n",
+      "        *data* must be (H, W, 4) with dtype=ubyte\n",
+      "        \"\"\"\n",
+      "        # www.libpng.org/pub/png/spec/1.2/PNG-Structure.html\n",
+      "        header = b'\\x89PNG\\x0d\\x0a\\x1a\\x0a' # header\n",
+      "\n",
+      "        def mkchunk(data, name):\n",
+      "            if isinstance(data, np.ndarray):\n",
+      "                size = data.nbytes\n",
+      "            else:\n",
+      "                size = len(data)\n",
+      "            chunk = np.empty(size + 12, dtype=np.ubyte)\n",
+      "            chunk.data[0:4] = struct.pack('!I', size)\n",
+      "            chunk.data[4:8] = name # b'CPXS' # critical, public, standard, safe\n",
+      "            chunk.data[8:8+size] = data\n",
+      "            chunk.data[-4:] = struct.pack('!i', zlib.crc32(chunk[4:-4]))\n",
+      "            return chunk\n",
+      "\n",
+      "        # www.libpng.org/pub/png/spec/1.2/PNG-Chunks.html#C.IHDR\n",
+      "        ctyp = 0b0010 # color\n",
+      "        h, w = data.shape[:2]\n",
+      "        depth = data.itemsize * 8\n",
+      "        ihdr = struct.pack('!IIBBBBB', w, h, depth, ctyp, 0, 0, 0)\n",
+      "        c1 = mkchunk(ihdr, 'IHDR')\n",
+      "\n",
+      "        # www.libpng.org/pub/png/spec/1.2/PNG-Chunks.html#C.IDAT\n",
+      "        idat = np.empty((h, w*3 + 1), dtype=np.ubyte) # insert filter byte at each scanline\n",
+      "        idat[:, 1:] = data.reshape(h, w*3)\n",
+      "        idat[:, 0] = 0\n",
+      "\n",
+      "        comp_data = zlib.compress(idat)\n",
+      "        c2 = mkchunk(comp_data, 'IDAT')    \n",
+      "        c3 = mkchunk(np.empty((0,), dtype=np.ubyte), 'IEND')\n",
+      "\n",
+      "        # concatenate\n",
+      "        lh = len(header)\n",
+      "        png = np.empty(lh + c1.nbytes + c2.nbytes + c3.nbytes, dtype=np.ubyte)\n",
+      "        png.data[:lh] = header\n",
+      "        p = lh\n",
+      "\n",
+      "        for chunk in (c1, c2, c3):\n",
+      "            png[p:p+len(chunk)] = chunk\n",
+      "            p += chunk.nbytes\n",
+      "\n",
+      "        return png"
      ],
      "language": "python",
      "metadata": {},
@@ -278,6 +323,7 @@
       "c = VispyWidget()\n",
       "c.native.setWindowFlags(Qt.WindowStaysOnTopHint)\n",
       "c.show(True)\n",
+      "\n",
       "display(c.widget)"
      ],
      "language": "python",
