--- a/online_backend/ipython/qt.ipynb
+++ b/online_backend/ipython/qt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bc1925c5e5d085084761df8343e60adf2e41ee24ee09dfea09f719b15a178143"
+  "signature": "sha256:a753fec42300d3ab614a67e5c1ea4f31097210894f5687dab2f3f90774d68a16"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -34,7 +34,23 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "INFO: Selected backend _pyqt4\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "INFO:vispy:Selected backend _pyqt4\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -105,7 +121,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -124,14 +141,15 @@
       "        for ev in content.get(\"events\"):\n",
       "            if ev.get(\"name\") == \"MouseEvent\":\n",
       "                mouse = ev.get(\"properties\")\n",
+      "                vispy_ev = app.MouseEvent(type=mouse.get(\"type\"), pos=mouse.get(\"pos\"), button=mouse.get(\"button\"))\n",
+      "                c._backend.mousePressEvent(vispy_ev)\n",
       "                x, y = mouse.get(\"pos\")\n",
-      "                print \"X: %d Y: %d\" % (x,y)\n",
-      "                if mouse.get(\"button\") == 0:\n",
-      "                    c.explosion(float(x), float(y))"
+      "                print \"X: %d Y: %d\" % (x,y)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -140,7 +158,6 @@
       "class VispyWidget(app.Canvas):\n",
       "    def __init__(self, *args, **kwargs):\n",
       "        app.Canvas.__init__(self, *args, **kwargs)\n",
-      "        self.size = 500, 500\n",
       "        self.widget = Screenshot()\n",
       "        \n",
       "        # Create program\n",
@@ -148,6 +165,8 @@
       "        self._program.bind(gloo.VertexBuffer(data))\n",
       "        self._program['s_texture'] = gloo.Texture2D(im1)\n",
       "\n",
+      "        self.explosion((0,0))\n",
+      "        \n",
       "    def on_initialize(self, event):\n",
       "        # Enable blending\n",
       "        gloo.set_state(blend=True, clear_color=(0, 0, 0, 1),\n",
@@ -157,15 +176,19 @@
       "        # Clear\n",
       "        gloo.clear()\n",
       "        # Draw\n",
-      "        self._program['u_time'] = time.time() - self._starttime\n",
       "        self._program.draw('points')\n",
       "\n",
       "        # Take a screenshot\n",
       "        self.shot()\n",
       "        # Invoke a new draw\n",
       "        self.update()\n",
-      "        \n",
+      "    \n",
+      "    def on_mouse_press(self, event):\n",
+      "        print \"mouse press\"\n",
+      "        self.explosion(event.pos)\n",
+      "    \n",
       "    def shot(self):\n",
+      "        self.swap_buffers()\n",
       "        img = _screenshot()\n",
       "        img = np.flipud(img)    \n",
       "        png = self.make_png(img)\n",
@@ -174,12 +197,14 @@
       "        self.widget.value = base64.b64encode(png)\n",
       "        \n",
       "        \n",
-      "    def explosion(self, x, y):\n",
+      "    def explosion(self, pos):\n",
+      "        %%debug\n",
       "        # New centerpos\n",
       "        #centerpos = np.random.uniform(-0.5, 0.5, (3,))\n",
       "        centerpos = np.ndarray(3)\n",
-      "        centerpos[0] = x/250.0 - 1.0\n",
-      "        centerpos[1] = 1.0 - y/250.0\n",
+      "        print pos[0], pos[1]\n",
+      "        centerpos[0] = float(pos[0])/250.0 - 1.0\n",
+      "        centerpos[1] = 1.0 - float(pos[1])/250.0\n",
       "        centerpos[2] = 0\n",
       "\n",
       "        self._program['u_centerPosition'] = centerpos\n",
@@ -195,11 +220,6 @@
       "        data['a_startPosition'] = np.random.normal(0.0, 0.2, (N, 3))\n",
       "        data['a_endPosition'] = np.random.normal(0.0, 1.2, (N, 3))\n",
       "\n",
-      "        # Set time to zero\n",
-      "        self._starttime = time.time()\n",
-      "        # Process events for 1.75 seconds\n",
-      "        while time.time() - self._starttime < 1.75:\n",
-      "            self.app.process_events()\n",
       "            \n",
       "    def make_png(self, data):\n",
       "        \"\"\"\n",
@@ -251,7 +271,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -314,7 +335,71 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "javascript": [
+        "\n",
+        "require([\"widgets/js/widget\"], function(WidgetManager){\n",
+        "    var Screenshot = IPython.DOMWidgetView.extend({\n",
+        "        render: function(){\n",
+        "            this.$canvas = $('<canvas />')\n",
+        "                .attr('id', 'canvas')\n",
+        "                .attr('width', '500')\n",
+        "                .attr('height', '500')\n",
+        "                .appendTo(this.$el);\n",
+        "            \n",
+        "            var canvas2d = this.$canvas[0].getContext('2d');\n",
+        "            canvas2d.fillStyle = \"blue\";\n",
+        "            canvas2d.font = \"bold 24px Arial\";\n",
+        "            canvas2d.fillText(\"Click Me!\", 100, 100);\n",
+        "        },\n",
+        "        \n",
+        "        events: {\n",
+        "            'mousedown': 'mouse_press',\n",
+        "        },\n",
+        "        \n",
+        "        mouse_press: function(e) {\n",
+        "           var rect = this.$canvas[0].getBoundingClientRect();\n",
+        "           var message = {\n",
+        "                        \"source\": \"browser\",\n",
+        "                        \"events\":\n",
+        "                        [\n",
+        "                            // Mouse Event\n",
+        "                            {\n",
+        "                                \"name\": \"MouseEvent\",\n",
+        "                                \"properties\":\n",
+        "                                {\n",
+        "                                    \"type\": \"mouse_press\", \n",
+        "                                    \"pos\": [e.clientX-rect.left, e.clientY-rect.top],\n",
+        "                                    \"button\": e.button,\n",
+        "                                }\n",
+        "                            }\n",
+        "                        ]\n",
+        "                    };\n",
+        "            \n",
+        "            this.send(message);\n",
+        "        },\n",
+        "\n",
+        "        // Update, whenever value attribute of our widget changes\n",
+        "        update : function(){\n",
+        "            var canvas2d = this.$canvas[0].getContext('2d');\n",
+        "            var img = new Image();\n",
+        "            var istr = this.model.get(\"value\");\n",
+        "            img.src = \"data:image/png;base64,\" + istr;\n",
+        "            canvas2d.drawImage(img, 0, 0);\n",
+        "        },\n",
+        "    })\n",
+        "    WidgetManager.register_widget_view(\"Screenshot\", Screenshot);\n",
+        "});"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.Javascript object>"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -323,9 +408,63 @@
       "c = VispyWidget()\n",
       "c.native.setWindowFlags(Qt.WindowStaysOnTopHint)\n",
       "c.show(True)\n",
-      "\n",
-      "display(c.widget)"
+      "display(c.widget)\n",
+      "app.run()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0 0\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "ERROR: No traceback has been produced, nothing to debug.\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "0"
+       ]
+      },
+      {
+       "ename": "TypeError",
+       "evalue": "'tuple' object is not callable",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-3-df69a46ac5be>\u001b[0m in \u001b[0;36m_handle_button_msg\u001b[1;34m(self, _, content)\u001b[0m\n\u001b[0;32m     13\u001b[0m                 \u001b[0mmouse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"properties\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m                 \u001b[0mvispy_ev\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMouseEvent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"type\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"pos\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbutton\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"button\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m                 \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmousePressEvent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvispy_ev\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m                 \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"pos\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m                 \u001b[1;32mprint\u001b[0m \u001b[1;34m\"X: %d Y: %d\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/vispy-0.2.1-py2.7.egg/vispy/app/backends/_qt.pyc\u001b[0m in \u001b[0;36mmousePressEvent\u001b[1;34m(self, ev)\u001b[0m\n\u001b[0;32m    315\u001b[0m         self._vispy_mouse_press(\n\u001b[0;32m    316\u001b[0m             \u001b[0mnative\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 317\u001b[1;33m             \u001b[0mpos\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    318\u001b[0m             \u001b[0mbutton\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBUTTONMAP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbutton\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    319\u001b[0m             \u001b[0mmodifiers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_modifiers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+       ]
+      },
+      {
+       "ename": "TypeError",
+       "evalue": "'tuple' object is not callable",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-3-df69a46ac5be>\u001b[0m in \u001b[0;36m_handle_button_msg\u001b[1;34m(self, _, content)\u001b[0m\n\u001b[0;32m     13\u001b[0m                 \u001b[0mmouse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"properties\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m                 \u001b[0mvispy_ev\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMouseEvent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"type\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"pos\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbutton\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"button\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m                 \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmousePressEvent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvispy_ev\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m                 \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmouse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"pos\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m                 \u001b[1;32mprint\u001b[0m \u001b[1;34m\"X: %d Y: %d\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/vispy-0.2.1-py2.7.egg/vispy/app/backends/_qt.pyc\u001b[0m in \u001b[0;36mmousePressEvent\u001b[1;34m(self, ev)\u001b[0m\n\u001b[0;32m    315\u001b[0m         self._vispy_mouse_press(\n\u001b[0;32m    316\u001b[0m             \u001b[0mnative\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 317\u001b[1;33m             \u001b[0mpos\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    318\u001b[0m             \u001b[0mbutton\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBUTTONMAP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbutton\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    319\u001b[0m             \u001b[0mmodifiers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_modifiers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mev\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
