Change events -> event

--- a/online_backend/ipython/static/base.ipynb
+++ b/online_backend/ipython/static/base.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a89b0b34456021900e874c63b7811a964d6b91c309b4c6386ef4769c999451fb"
+  "signature": "sha256:d31a3b0529d2428697565b527dbb9856652ea60071c9db6d7cd3a53fc3635360"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,21 +28,19 @@
       "    var modifiers = get_modifiers(e);\n",
       "    var event = {\n",
       "        \"source\": \"browser\",\n",
-      "        \"events\":\n",
-      "        [\n",
-      "            // Mouse Event\n",
+      "        \"event\":\n",
+      "        // Mouse Event\n",
+      "        {\n",
+      "            \"name\": \"MouseEvent\",\n",
+      "            \"properties\":\n",
       "            {\n",
-      "                \"name\": \"MouseEvent\",\n",
-      "                \"properties\":\n",
-      "                {\n",
-      "                    \"type\": type,\n",
-      "                    \"pos\": [e.clientX-rect.left, e.clientY-rect.top],\n",
-      "                    \"button\": e.button | null,\n",
-      "                    \"delta\": null,\n",
-      "                    \"modifiers\": modifiers,\n",
-      "                }\n",
+      "                \"type\": type,\n",
+      "                \"pos\": [e.clientX-rect.left, e.clientY-rect.top],\n",
+      "                \"button\": e.button | null,\n",
+      "                \"delta\": null,\n",
+      "                \"modifiers\": modifiers,\n",
       "            }\n",
-      "        ]\n",
+      "        }\n",
       "    };\n",
       "    return event;\n",
       "};\n",
@@ -50,18 +48,16 @@
       "function gen_key_event(c, e, type){\n",
       "    var event = {\n",
       "        \"source\": \"browser\",\n",
-      "        \"events\":\n",
-      "        [\n",
-      "            // Key Event\n",
+      "        \"event\":\n",
+      "        // Key Event\n",
+      "        {\n",
+      "            \"name\": \"KeyEvent\",\n",
+      "            \"properties\":\n",
       "            {\n",
-      "                \"name\": \"KeyEvent\",\n",
-      "                \"properties\":\n",
-      "                {\n",
-      "                    \"type\": type,\n",
-      "                    \"key\": e.which,\n",
-      "                }\n",
+      "                \"type\": type,\n",
+      "                \"key\": e.which,\n",
       "            }\n",
-      "        ]\n",
+      "        }\n",
       "    };\n",
       "    return event;\n",
       "};\n",
@@ -73,6 +69,7 @@
       "                .attr('id', 'canvas')\n",
       "                .attr('width', '500')\n",
       "                .attr('height', '500')\n",
+      "                .attr('tabindex', '1')\n",
       "                .appendTo(this.$el);\n",
       "        },\n",
       "        \n",
