update example with key events

--- a/online_backend/ipython/ipynb_vnc_ex1.ipynb
+++ b/online_backend/ipython/ipynb_vnc_ex1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:acce660cedfd89145d41d2c4488743a1f91a3711d58dd25fc67ccd6d3eaa1dc2"
+  "signature": "sha256:f5af7be3b4922ef0e05972f8c6017288da0bc6e4003159095cb141913693dad8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -60,14 +60,20 @@
       "        self.app.process_events()\n",
       "        \n",
       "    def on_mouse_release(self, event):\n",
-      "        print event.pos\n",
+      "        print event.pos, event.modifiers\n",
       "        \n",
       "    #def on_mouse_move(self, event):\n",
       "        #print event.pos\n",
       "        \n",
       "    #def on_mouse_wheel(self, event):\n",
-      "        # Doesn't working yet\n",
-      "        #print event.delta"
+      "        # Isn't working yet\n",
+      "        #print event.delta\n",
+      "        \n",
+      "    def on_key_press(self, event):\n",
+      "        print event.key, event.modifiers\n",
+      "        \n",
+      "    #def on_key_release(self, event):\n",
+      "        #print event.key, event.modifiers"
      ],
      "language": "python",
      "metadata": {},
